# NEXUS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.txt  LICENSE  README.md
cmake/: EnumOption.cmake
cmake/config_external/: ASIO.cmake  Assimp.cmake  Box2D.cmake  Bullet3.cmake  LibsndFile.cmake  Libsodium.cmake  OpenAL.cmake  OpenGL.cmake  SDL2.cmake
cmake/config_library/: Definitions.cmake  GraphicsAPI.cmake  Platform.cmake
examples/audio/: CMakeLists.txt  music.cpp  sound.cpp
examples/basic/: CMakeLists.txt  app.cpp  collision_2d.cpp  draw_on_surface.cpp  surface_generation.cpp  surface_manipulation.cpp  triangle.cpp  window_icon.cpp
examples/basic_gl/: CMakeLists.txt  app.cpp  camera_2d.cpp  camera_3d.cpp  font_3d.cpp  model_3d.cpp  model_animation_3d.cpp  multiple_contexts.cpp  multiple_windows.cpp  primitives_2d.cpp  primitives_3d.cpp  sprite_batch.cpp  target_texture.cpp  texture_shader.cpp  triangle.cpp
examples/basic_sr/: CMakeLists.txt  camera_2d.cpp  font_3d.cpp  many_textures.cpp  model_3d.cpp  model_animation_3d.cpp  primitives_2d.cpp  primitives_3d.cpp  target_texture.cpp  texture.cpp  texture_shader.cpp  triangle.cpp
examples/ext_2D_gfx/: CMakeLists.txt  particles.cpp  particles_texture.cpp  sprite.cpp  sprite_instances.cpp
examples/ext_2D_gl/: CMakeLists.txt  particles.cpp  particles_texture.cpp  sprite.cpp  sprite_instances.cpp
examples/ext_3D_gl/: CMakeLists.txt  basic_light_3d.cpp  billboard_animation.cpp  lights_3d.cpp  particles_3d.cpp  skybox.cpp
examples/ext_gfx/: CMakeLists.txt  font.cpp  renderer.cpp  sprite_batch.cpp  streaming_texture.cpp  texture.cpp  triangle.cpp  vertex_renderer.cpp
examples/network/: CMakeLists.txt  client.cpp  common.hpp  server.cpp
examples/physics_2D/: CMakeLists.txt  basic.cpp
examples/physics_3D/: CMakeLists.txt  advanced_world.cpp  basic.cpp  common.hpp
include/: nexus.hpp
include/audio/: nxDevice.hpp  nxEffect.hpp  nxEnums.hpp  nxMiscs.hpp  nxMusic.hpp  nxSound.hpp  nxSource.hpp
include/audio/impl/: nxSource.hpp
include/core/: nxApp.hpp  nxClock.hpp  nxEvent.hpp  nxException.hpp  nxFileFormat.hpp  nxFileSystem.hpp  nxLog.hpp  nxRandom.hpp  nxState.hpp  nxText.hpp  nxWindow.hpp
include/core/ext_core/: nxAssetManager.hpp  nxSaveManager.hpp
include/gapi/cmn_impl/: nxCamera2D.hpp  nxCamera3D.hpp  nxContext.hpp  nxEnums.hpp  nxFont.hpp  nxPrimitives2D.hpp  nxPrimitives3D.hpp
include/gapi/cmn_impl/sp_model/: nxMaterial.hpp  nxMesh.hpp  nxModel.hpp
include/gapi/gl/: nxApp.hpp  nxCamera2D.hpp  nxCamera3D.hpp  nxConfig.hpp  nxContext.hpp  nxContextual.hpp  nxEnums.hpp  nxExtensions.hpp  nxFont.hpp  nxPrimitives2D.hpp  nxPrimitives3D.hpp  nxRenderBatch.hpp  nxShader.hpp  nxTargetTexture.hpp  nxTexture.hpp  nxUtils.hpp  nxWindow.hpp
include/gapi/gl/ext_2D/: nxParticles2D.hpp  nxSprite2D.hpp
include/gapi/gl/ext_3D/: nxLights3D.hpp  nxParticles3D.hpp  nxSkybox.hpp  nxSprite3D.hpp
include/gapi/gl/sp_model/: nxMaterial.hpp  nxMesh.hpp  nxModel.hpp
include/gapi/sr/: nxApp.hpp  nxCamera2D.hpp  nxCamera3D.hpp  nxContext.hpp  nxContextual.hpp  nxDepthBuffer.hpp  nxEnums.hpp  nxFont.hpp  nxFramebuffer.hpp  nxPipeline.hpp  nxPrimitives2D.hpp  nxPrimitives3D.hpp  nxShader.hpp  nxTargetTexture.hpp  nxTexture.hpp  nxWindow.hpp
include/gapi/sr/sp_model/: nxMaterial.hpp  nxMesh.hpp  nxModel.hpp
include/gfx/: nxBasicFont.hpp  nxBlendMode.hpp  nxColor.hpp  nxPixel.hpp  nxSurface.hpp
include/gfx/cmn_ext_2D_ext_3D_impl/: nxParticles.hpp  nxSprite.hpp
include/gfx/cmn_ext_gfx_gapi_impl/: nxFont.hpp  nxTexturePatch.hpp
include/gfx/ext_gfx/: nxApp.hpp  nxFont.hpp  nxRenderer.hpp  nxStreamingTexture.hpp  nxTargetTexture.hpp  nxTexture.hpp  nxVertexRenderer.hpp
include/gfx/ext_gfx/ext_2D/: nxParticles.hpp  nxSprite.hpp
include/input/: nxGamepad.hpp  nxKeyboard.hpp  nxMouse.hpp  nxTouch.hpp
include/math/: nxEase.hpp  nxMat2.hpp  nxMat3.hpp  nxMat4.hpp  nxMath.hpp  nxVec2.hpp  nxVec3.hpp  nxVec4.hpp
include/net/: nxClientInterface.hpp  nxConnection.hpp  nxPacket.hpp  nxSecurity.hpp  nxServerInterface.hpp
include/phys/2D/: nxDrawing.hpp  nxPhysics.hpp  nxShapes.hpp
include/phys/3D/: nxWorld.hpp
include/phys/3D/rigid_objects/: nxRigidCapsule.hpp  nxRigidCube.hpp  nxRigidMesh.hpp  nxRigidModel.hpp  (+2 more)
include/platform/: nxConfig_Android.hpp  nxConfig_Linux.hpp  nxConfig_Mac.hpp  nxConfig_Win32.hpp  nxPlatform.hpp
include/shape/2D/: nxAABB.hpp  nxCircle.hpp  nxCollisionShape.hpp  nxEllipse.hpp  nxFunctions.hpp  nxLine.hpp  nxMesh.hpp  nxPolygon.hpp  nxRectangle.hpp  nxTriangle.hpp
include/shape/3D/: nxAABB.hpp  nxCapsule.hpp  nxCollisionShape.hpp  nxCube.hpp  nxCylinder.hpp  nxLine.hpp  nxMesh.hpp  nxPlane.hpp  nxRay.hpp  nxSphere.hpp
include/utils/: nxContextual.hpp  nxThreadSafeQueue.hpp
source/: CMakeLists.txt  nexus.cpp
source/audio/: CMakeLists.txt  nxDevice.cpp  nxMusic.cpp  nxSound.cpp
source/core/: CMakeLists.txt  nxFileSystem.cpp  nxText.cpp  nxWindow.cpp
source/gapi/: CMakeLists.txt
source/gapi/cmn_impl/: nxCamera2D.cpp  nxCamera3D.cpp  nxPrimitives2D.cpp  nxPrimitives3D.cpp
source/gapi/gl/: nxCamera3D.cpp  nxContext.cpp  nxExtensions.cpp  nxFont.cpp  nxRenderBatch.cpp  nxShader.cpp  nxTargetTexture.cpp  nxTexture.cpp  nxUtils.cpp  nxWindow.cpp
source/gapi/sr/: nxCamera3D.cpp  nxContext.cpp  nxFont.cpp  nxPipeline.cpp  nxShader.cpp  nxTargetTexture.cpp  nxTexture.cpp  nxWindow.cpp
source/gfx/: CMakeLists.txt  nxSurface.cpp
source/gfx/ext_gfx/: nxFont.cpp  nxRenderer.cpp  nxStreamingTexture.cpp  nxTargetTexture.cpp  nxTexture.cpp  nxVertexRenderer.cpp
source/net/: CMakeLists.txt  nxSecurity.cpp
source/phys/: CMakeLists.txt
source/phys/2D/: nxDrawing.cpp  nxShapes.cpp
source/phys/3D/: nxWorld.cpp
source/shape/: CMakeLists.txt
source/shape/2D/: nxAABB.cpp  nxCircle.cpp  nxEllipse.cpp  nxFunctions.cpp  nxLine.cpp  nxMesh.cpp  nxPolygon.cpp  nxRectangle.cpp  nxRectangleF.cpp  nxTriangle.cpp  nxTriangleF.cpp
source/shape/3D/: nxAABB.cpp  nxCapsule.cpp  nxCube.cpp  nxCylinder.cpp  nxLine.cpp  nxMesh.cpp  nxPlane.cpp  nxRay.cpp  nxSphere.cpp
(+15 files in other folders)
